fix footer clipping issue

--- a/styles/todos.scss
+++ b/styles/todos.scss
@@ -99,6 +99,7 @@ main {
     padding-left: 1em;
     opacity: 0.7;
     border-radius: 25px;
+    margin-bottom: 5em;
 
     &:hover {
       box-shadow: 6px 4px 9px #635197;
